added bulk remove logic
